# HaskellControlFlow

./: .gitignore  HaskellControlFlow.cabal  README.md  compile.sh
docs/: documentation.tex
examples/: cfa.hs  church-booleans.hs  double.hs  fac.hs  lists-and-tuples.hs  numbers.hs  prelude.hs  recursive.hs  sort.hs  ternary.hs  test.hs  test2.hs  useless.hs
src/: Main.hs
src/Control/: Worklist.hs
src/Data/: Fresh.hs
src/HaskellControlFlow/Analysis/: CfaSolver.hs  Inference.hs
src/HaskellControlFlow/Calculus/: Calculus.hs  Formatter.hs  TypedCalculus.hs  Types.hs
src/HaskellControlFlow/Parser/: Parser.hs
src/Language/Haskell/SugarFree/: FromHaskellSrc.hs  Syntax.hs
src/Util/: OnlyValue.hs
